--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: UH Marketplace
 name: UH Marketplace
 baseurl: "" 
 url: "https://uhm-marketplace.github.io" 
-theme: jekyll-theme-hacker
+theme: jekyll-theme-modernist
